# ppin-graph-autoencoder

./: .gitignore  README.md  pyproject.toml
notebooks/: exploring.ipynb
